--- a/04-iteration-02.qmd
+++ b/04-iteration-02.qmd
@@ -17,12 +17,13 @@ bibliography: references.bib
 
 ## Learning objectives
 
-In this session, we will discuss:
+In this session, we will discuss functional programming:
 
 ::: incremental
--   using `purrr::map()` to read a bunch of files
--   using `purrr::walk()` to write a bunch of files
--   functional programming, more generally
+- example: read a bunch of files, then put them in a single data frame
+- fundamental functions in {purrr}: 
+   - `map()`, `keep()`, and `reduce()`
+- more generally, using functions as arguments to functions 🤯
 :::
 
 . . .
@@ -147,7 +148,7 @@ read_csv("not/a/file.csv")
 
 Function operators:
 
--   take a function
+-   take a function 
 -   return a modified function
 
 . . .
@@ -190,15 +191,211 @@ possibly_read_excel <- possibly() # we do the rest
 
 Use this function in your script.
 
-## If we have time
+## Fundamental operations
 
 Functional programming has three fundamental operations:
 
 ::: incremental
--   `filter()` - like spaghetti, not coffee: `purrr::keep()`
--   `map()` - do *this* to each element: `purrr::map()`
--   `reduce()` - combine into new thing: `purrr::reduce()`
+-   `map` - do *this* to each element: `purrr::map()`
+-   `filter` - like spaghetti, not coffee: `purrr::keep()`
+-   `reduce` - combine into new thing: `purrr::reduce()`
 :::
+
+. . . 
+
+Each of these takes a *function* as an argument, to tell the operator *what* to do.
+
+## Map {auto-animate=true}
+
+```r
+num <- 1:4
+map(num, \(x) x + 1)
+```
+
+<hr>
+
+`map()` takes:
+
+  - list or atomic vector
+  - function to apply to each member of the vector
+
+## Map {auto-animate=true}
+
+```r
+num <- 1:4
+map(num, \(x) x + 1)
+```
+
+<hr>
+
+| Input   | Result |
+|:-------:|:------:|
+| 1       | 2      |
+| 2       |        |        
+| 3       |        |      
+| 4       |        |      
+
+
+## Map {auto-animate=true, auto-animate-unmatched=false}
+
+```r
+num <- 1:4
+map(num, \(x) x + 1)
+```
+
+<hr>
+
+| Input   | Result |
+|:-------:|:------:|
+| 1       | **2**  |
+| 2       | **3**  |        
+| 3       | **4**  |      
+| 4       | **5**  |   
+
+## Map: Atomic Variants
+
+:::: {.columns}
+
+::: {.column width="50%"}
+
+`map()` always returns a list:
+
+```{r}
+num <- 1:4
+map(num, \(x) x + 1)
+```
+:::
+
+::: {.column width="50%"}
+
+Use an atomic variant to specify type:
+
+```{r}
+num <- 1:4
+map_int(num, \(x) x + 1)
+```
+:::
+
+::::
+
+## Filter (Keep) {auto-animate=true}
+
+
+```r
+num <- 1:4
+keep(num, \(x) x %% 2 == 0)
+```
+
+<hr>
+
+Outside {purrr}: known as `filter()`, but {dplyr} took this name first. 
+
+`keep()` takes:
+
+  - list or vector
+  - function, when applied to each member, returns `TRUE` or `FALSE`
+    - this is called a *predicate* function
+
+## Filter (Keep) {auto-animate=true, auto-animate-unmatched=false}
+
+```r
+num <- 1:4
+keep(num, \(x) x %% 2 == 0)
+```
+
+<hr>
+
+| Input   | Evaluation | Result |
+|:-------:|:---------- |:------:|
+| 1       | `FALSE`    |        | 
+| 2       | `TRUE`     | 2      |
+| 3       |            |        |              
+| 4       |            |        |
+
+## Filter (Keep) {auto-animate-unmatched=false}
+
+```r
+num <- 1:4
+keep(num, \(x) x %% 2 == 0)
+```
+
+<hr>
+
+| Input   | Evaluation | Result |
+|:-------:|:----------- |:------:|
+| 1       | **`FALSE`** |        | 
+| 2       | **`TRUE`**  | **2**  |
+| 3       | **`FALSE`** |        |              
+| 4       | **`TRUE`**  | **4**  |
+
+## Reduce {auto-animate=true}
+
+```r
+num <- 1:4
+reduce(num, \(acc, x) acc + x)
+```
+
+<hr>
+
+`reduce()` takes:
+
+  - a list or vector
+  - a *reducer* function, which takes two arguments:
+    - the accumulated value
+    - the "next" value of the input
+    
+## Reduce {auto-animate=true}
+
+```r
+num <- 1:4
+reduce(num, \(acc, x) acc + x)
+```
+
+<hr>
+
+| Input   | Result |
+|:-------:|:------:|
+| 1       | 1      |
+| 2       |        |        
+| 3       |        |      
+| 4       |        |   
+
+## Reduce {auto-animate=true, auto-animate-unmatched=false}
+
+```r
+num <- 1:4
+reduce(num, \(acc, x) acc + x)
+```
+
+<hr>
+
+| Input   | Result |
+|:-------:|:------:|
+| 1       |        |
+| 2       | 3      |        
+| 3       |        |      
+| 4       |        |   
+
+## Reduce {auto-animate=true, auto-animate-unmatched=false}
+
+```r
+num <- 1:4
+reduce(num, \(acc, x) acc + x)
+```
+
+<hr>
+
+| Input   | Result |
+|:-------:|:------:|
+| 1       |        |
+| 2       |        |        
+| 3       |        |      
+| 4       | **10** |   
+
+## Moar reduce
+
+- sometimes easier just to say `sum`, which will take two arguments
+- `.init`
 
 ## Functional sandwiches
 
@@ -206,12 +403,12 @@ Functional programming has three fundamental operations:
 
 ## Horrible example
 
-Implement `list_rbind()` using functional-programming techniques:
+Re-imagine `list_rbind()` using functional-programming techniques:
 
 ``` r
-list_rbind2 <- function(df, names_to) {
-  df |>
-    purrr::keep(\(x) !is.null(x)) |>
+list_rbind2 <- function(list_df, names_to) {
+  list_df |>
+    purrr::keep(negate(is.null)) |>
     purrr::imap(\(d, name) dplyr::mutate(d, "{names_to}" := name)) |>
     purrr::reduce(rbind)
 }
@@ -223,13 +420,18 @@ list_rbind2 <- function(df, names_to) {
 -   *reduces* list to single data-frame, `purrr::reduce()`
 :::
 
-## Our turn: saving multiple outputs
+## Functions as arguments
 
-**Goal**: write out a csv file *for each* value of `clarity` within ggplot2's `diamonds` dataset.
+```{r}
+library("tidyverse")
+library("palmerpenguins")
 
-. . .
+ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
+  geom_point() +
+  scale_color_discrete(labels = tolower) # tolower is a function
+```
 
-<hr>
+## Walk
 
 When we read "for each", we might think of using `map()`:
 
@@ -241,104 +443,6 @@ When we read "for each", we might think of using `map()`:
 
 {purrr} has a function for that: `walk()` (and friends).
 
-## Our turn - starter code
-
-`iteration-02-02-writing-files.R`
-
-``` r
-# ?dplyr::group_nest(), ?stringr::str_glue()
-# from diamonds, create tibble with columns: clarity, data, filename
-by_clarity_csv <-
-  diamonds |>
-  # nest by clarity
-  # create column for filename
-  print()
-
-# ?readr::write_csv()
-# using the data and filename, write out csv files
-walk2(
-  by_clarity_csv$data,
-  by_clarity_csv$filename,
-  \(data, filename) NULL # replace with actual code
-)
-```
-
-## Our turn: writing multiple plots
-
-**Goal**: Save histogram for `carat` for each value of `clarity` within `diamonds` dataset.
-
-. . .
-
-<hr>
-
-Create a `plot` column, where each element is a ggplot. This will be a list-column.
-
-. . .
-
-You can use `map()`:
-
--   within `mutate()`, with all the tidy-eval goodness!
--   with additional arguments (after the function), e.g.:
-
-``` r
-mutate(
-  plot = map(data, histogram, carat)
-)
-```
-
-. . .
-
-equivalent to
-
-``` r
-plot[[1]] = histogram(data[[1]], carat)
-plot[[2]] = histogram(data[[2]], carat)
-...
-```
-
-## Our turn: starter-code
-
-``` r
-# from diamonds, create tibble with columns: clarity, data, plot, filename
-by_clarity_plot <-
-  diamonds |>
-  # nest by clarity
-  group_nest(clarity) |>
-  # create columns for plot, filename
-  mutate(
-    filename = str_glue("clarity-{clarity}.png")#,
-    #plot = map(),
-  ) |>
-  print()
-```
-
-## Our turn: more starter-code
-
-``` r
-# ?ggplot2::ggsave()
-ggsave_local <- function(filename, plot) {
-
-}
-
-# using filename and plot, write out plots to png files
-walk2(
-  by_clarity_plot$filename,
-  by_clarity_plot$plot,
-  # write plot file to data/clarity directory
-  ggsave_local
-)
-```
-
-## Functions as arguments
-
-```{r}
-library("tidyverse")
-library("palmerpenguins")
-
-ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
-  geom_point() +
-  scale_color_discrete(labels = tolower) # tolower is a function
-```
 
 ## If we have time (2)
 
