--- a/04-iteration-02.qmd
+++ b/04-iteration-02.qmd
@@ -193,7 +193,7 @@ Use this function in your script.
 
 ## Fundamental operations
 
-Functional programming has three fundamental operations:
+Functional programming has three fundamental operations; they act on lists or vectors:
 
 ::: incremental
 -   `map` - do *this* to each element: `purrr::map()`
@@ -209,7 +209,7 @@ Each of these takes a *function* as an argument, to tell the operator *what* to 
 
 ```r
 num <- 1:4
-map(num, \(x) x + 1)
+num |> map(\(x) x + 1)
 ```
 
 <hr>
@@ -223,7 +223,7 @@ map(num, \(x) x + 1)
 
 ```r
 num <- 1:4
-map(num, \(x) x + 1)
+num |> map(\(x) x + 1)
 ```
 
 <hr>
@@ -240,7 +240,7 @@ map(num, \(x) x + 1)
 
 ```r
 num <- 1:4
-map(num, \(x) x + 1)
+num |> map(\(x) x + 1)
 ```
 
 <hr>
@@ -262,7 +262,7 @@ map(num, \(x) x + 1)
 
 ```{r}
 num <- 1:4
-map(num, \(x) x + 1)
+num |> map(\(x) x + 1)
 ```
 :::
 
@@ -272,7 +272,7 @@ Use an atomic variant to specify type:
 
 ```{r}
 num <- 1:4
-map_int(num, \(x) x + 1)
+num |> map_int(\(x) x + 1)
 ```
 :::
 
@@ -283,7 +283,7 @@ map_int(num, \(x) x + 1)
 
 ```r
 num <- 1:4
-keep(num, \(x) x %% 2 == 0)
+num |> keep(\(x) x %% 2 == 0)
 ```
 
 <hr>
@@ -300,7 +300,7 @@ Outside {purrr}: known as `filter()`, but {dplyr} took this name first.
 
 ```r
 num <- 1:4
-keep(num, \(x) x %% 2 == 0)
+num |> keep(\(x) x %% 2 == 0)
 ```
 
 <hr>
@@ -316,7 +316,7 @@ keep(num, \(x) x %% 2 == 0)
 
 ```r
 num <- 1:4
-keep(num, \(x) x %% 2 == 0)
+num |> keep(\(x) x %% 2 == 0)
 ```
 
 <hr>
@@ -332,7 +332,7 @@ keep(num, \(x) x %% 2 == 0)
 
 ```r
 num <- 1:4
-reduce(num, \(acc, x) acc + x)
+num |> reduce(\(acc, x) acc + x)
 ```
 
 <hr>
@@ -348,7 +348,7 @@ reduce(num, \(acc, x) acc + x)
 
 ```r
 num <- 1:4
-reduce(num, \(acc, x) acc + x)
+num |> reduce(\(acc, x) acc + x)
 ```
 
 <hr>
@@ -364,7 +364,7 @@ reduce(num, \(acc, x) acc + x)
 
 ```r
 num <- 1:4
-reduce(num, \(acc, x) acc + x)
+num |> reduce(\(acc, x) acc + x)
 ```
 
 <hr>
@@ -380,7 +380,7 @@ reduce(num, \(acc, x) acc + x)
 
 ```r
 num <- 1:4
-reduce(num, \(acc, x) acc + x)
+num |> reduce(\(acc, x) acc + x)
 ```
 
 <hr>
@@ -396,7 +396,7 @@ reduce(num, \(acc, x) acc + x)
 
 ```r
 num <- 1:4
-reduce(num, \(acc, x) acc + x, .init = 1)
+num |> reduce(\(acc, x) acc + x, .init = 1)
 ```
 
 <hr>
@@ -412,7 +412,7 @@ reduce(num, \(acc, x) acc + x, .init = 1)
 
 ```r
 num <- 1:4
-reduce(num, sum, .init = 1)
+num |> reduce(sum, .init = 1)
 ```
 
 <hr>
@@ -428,7 +428,7 @@ reduce(num, sum, .init = 1)
 
 ```{r}
 num <- c(1, 2, 3, NA, 4)
-reduce(num, sum)
+num |> reduce(sum)
 ```
 
 . . .
@@ -442,7 +442,7 @@ The default behavior for `sum()` is not to remove `NA` values.
 To change the behavior, use an anonymous function:
 
 ```{r}
-reduce(num, \(acc, x) sum(acc, x, na.rm = TRUE))
+num |> reduce(\(acc, x) sum(acc, x, na.rm = TRUE))
 ```
 
 . . .
@@ -451,7 +451,7 @@ reduce(num, \(acc, x) sum(acc, x, na.rm = TRUE))
 
 ```r
 # TODO: check that newer Quarto will fix font-size here
-reduce(num, sum, na.rm = TRUE)
+num |> reduce(sum, na.rm = TRUE)
 ```
 ::: 
 
